# ADS_FATEC

./: Challenge4.c  README.md  challenge3.c  ex2.c  ex3.c
1o_sem/IAC001/: Readme.md
1o_sem/IAL002/10_aula1/: challenge1.c
1o_sem/IAL002/20_Aula2/: Readme.md  ex1.c
1o_sem/IAL002/50_Aula5/: 10_Atividade1_CorridaMotos.c  Readme.md
1o_sem/IAL002/60_Aula6/: Challenge1.c  Challenge2.c  Readme.md
1o_sem/IAL002/70_Aula7/: 02_desafio2.c  03_desafio3.c  Ex1.c  Ex2.c
1o_sem/IAL002/80_Projeto_final/: projetofinal.c  projetofinal.c++  projetofinal.js
1o_sem/MMD001/: Atividade2.py  Readme.md  Somatorialeo.c  atividade2.c
1osem/IAC001/: arq.c
1osem/IAL002/: 60_Aula6
1osem/IAL002/10_aula1/: Redme.md  challenge2.c  ex1.c  ex2.c  ex3.c
1osem/IAL002/30_Aula3/: Readme.md  exerc1.c
1osem/IAL002/40_Aula4/: Exemplo2_vetor.c  Exemplo_vetor.c  Readme.md  Vectorchallenge.c  Vectorchallenge2.c
1osem/IAL002/50_Aula5/: 20_Atividade2_Campeonato.c
1osem/IAL002/60_Aula6/: vetorex.c
1osem/IAL002/70_Aula7/: 01_Desafio1.c  Ex3.c  Readme.md
1osem/IAL002/80_Projeto_final/: Readme.md
1osem/MMD001/: DesafioMat.c  Somatoria.c  matriz.c
2o_Sem/ILP010/: Readme.MD
2o_Sem/ILP010/00_Projeto_final/: CMakeLists.txt  Readme  Readme.md
2o_Sem/ILP010/00_Projeto_final/Projeto_final_V1/: Readme.md
2o_Sem/ILP010/00_Projeto_final/Projeto_final_v1/: CMakeLists.txt  CMakePresets.json  main.c  produtividade.c  produtividade.h
2o_Sem/ILP010/00_Projeto_final/include/: gui.h  produtividade.h
2o_Sem/ILP010/00_Projeto_final/src/: gui.c  main.c  produtividade.c
2o_Sem/ILP010/10_17022024/: At1.c  At2.c  At3.c  At4.c  At5.c
2o_Sem/ILP010/20_24022024/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c
2o_Sem/ILP010/30_09032024/: Ex1.c  Ex2.c  Ex3.c
2o_Sem/ILP010/40_16032024/: Ex1.c  Ex2.c
2o_Sem/ILP010/50_13042024/: ex1.c  ex2.c  ex3.c  (+1 more)
2o_Sem/ILP010/70_27042024/01_Produto/: CMakeLists.txt  main.c  produto.c  produto.h
2o_Sem/MCA002/: Atividade1.c  Atividade2.c  Atividade3.c  Atividade4.c  Readme.md
(+79 files in other folders)
